--- a/locale/ja/LC_MESSAGES/index.po
+++ b/locale/ja/LC_MESSAGES/index.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: sphinx test 0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-02-25 14:34+0900\n"
-"PO-Revision-Date: 2014-02-25 14:35+0900\n"
+"PO-Revision-Date: 2014-02-25 15:31+0900\n"
 "Last-Translator: JOTAKI, Taisuke <tekapo@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +19,7 @@ msgstr "sphinx テストドキュメントへようこそ!"
 
 #: ../../index.rst:9
 msgid "Contents:"
-msgstr ""
+msgstr "コンテンツ:"
 
 #: ../../index.rst:17
 msgid "Indices and tables"
