--- a/locale/ja/LC_MESSAGES/index.po
+++ b/locale/ja/LC_MESSAGES/index.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: sphinx test 0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-02-25 14:34+0900\n"
-"PO-Revision-Date: 2014-04-06 11:40+0900\n"
+"PO-Revision-Date: 2014-04-06 11:51+0900\n"
 "Last-Translator: JOTAKI, Taisuke <tekapo@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -35,4 +35,4 @@ msgstr ":ref:`modindex`"
 
 #: ../../index.rst:21
 msgid ":ref:`search`"
-msgstr ":ref:`search`"
+msgstr ":ref:`検索`"
